# cloudgate

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: check.yml
docker/: Dockerfile.auth  Dockerfile.gateway  Dockerfile.profile
scripts/: check_env_example.py  init-db.sql  reset-db.sh  reset-grafana.sh
services/auth/: main.py
services/auth/api/: dependencies.py  routes.py
services/auth/models/: user.py
services/auth/services/: auth_service.py  password_service.py  token_service.py
services/gateway/: main.py
services/gateway/api/: config_endpoint.py  routes.py
services/gateway/services/: proxy_service.py
services/gateway/static/: package-lock.json  package.json  tsconfig.json
services/gateway/static/modules/auth/: auth-page.ts
services/gateway/static/modules/auth/login/: login.css  login.html  login.ts
services/gateway/static/modules/auth/register/: register.css  register.html  register.ts
services/gateway/static/modules/home/: home.css  home.ts  index.html
services/gateway/static/shared/: types.ts  utils.ts
services/gateway/static/shared/components/: api.ts  base-page.ts  button.ts  footer.ts  form.ts  header.ts  message.ts  page-layout.ts
services/gateway/static/shared/css/: global.css
services/gateway/static/shared/utils/: api-error.ts  auth-flow.ts  dom.ts  form-fields.ts
services/profile/: main.py
services/profile/api/: dependencies.py  routes.py
services/profile/models/: profile.py
shared/: __init__.py  config.py
shared/api/: helpers.py
shared/database/: connection.py  redis.py
shared/middleware/: __init__.py  circuit_breaker.py  logging.py  rate_limiter.py
shared/schemas/: __init__.py  auth.py  base.py  profile.py
tests/: conftest.py
tests/integration/: test_auth_api.py
tests/unit/: test_auth.py  test_middleware.py
